# Agentic_RAG

./: .dockerignore  .env.example  .gitignore  Tim3_Req_Res (1).md  analisis_sistem_agentic_rag.md  bacaan.txt  diagram.py  docker-compose.yml  llama-cpp.ipynb  pyproject.toml  setup-and-query-a-ollama-server-cc16f5.ipynb  start_local.bat  test_model_kaggle.ipynb  test_search.py  tools_rag_team.py  walkthrough (1).md
agentic_api/: .dockerignore  .env.example  Dockerfile  api_models.py  celery_app.py  contoh_request.http  debug_pipeline.py  docker-compose.yml  full_pipeline.py  graph.py  llm.py  main.py  minio_client.py  model_registry.py  prompt_config.py  requirements.txt  state.py  tasks.py  test_rekom.py  testvlm.py  tools.py
agentic_api/chat_memory/: config.py  dependencies.py  schemas.py
agentic_api/tasks/: __init__.py  generate_task.py  pipeline_task.py
agentic_api/templates/: bacaan.j2  essay_evaluation.j2  essay_judge_system.j2  essay_judge_user.j2  evaluator.j2  evaluator_prometheus.j2  flashcard.j2  insight.j2  leveling_criteria.md  mindmap.j2  pretest.j2  quiz_essay.j2  quiz_pg.j2  rekomendasi.j2  revisi.j2  stimulus.md  summary.j2  system.j2
extraction/output_multimodal_Bahasa_Indonesia_BS_KLS_X_Rev/: Bahasa_Indonesia_BS_KLS_X_Rev_raw.md  (+2 more)
model_api/: .env.example  docker-compose.yml  model_api.py  model_registry.py  requirements.txt
promptsr2/: essay.md  flashcards.md  materi.md  mind_map.md  pilgan.md  pretest.md  prompt_builder.py  run.py  system.md  user.md
visualizer/: index.html
visualizer_tools/: script.js  styles.css  visualizer_2_0.html
(+290 files in other folders)
