[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn",
    "gunicorn",
    "pydantic",
    "python-dotenv",
    "requests",
    "sentence-transformers",
    "rank_bm25",
    "torch",
    "huggingface_hub",
    "langgraph",
    "langchain_core",
    "langchain_aws",
    "langchain_openai",
    "langchain_community",
    "boto3",
    "jinja2",
    "docling",
    "pypdf",
    "python-multipart",
    "Pillow",
    "qdrant-client",
    "transformers",
    "numpy",
    "cachetools",
    "slowapi",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
